# ur_ros_rtde

./: .gitignore  LICENSE  README.md
docs/: README.md  extending_the_control_script.md  integration_with_moveit.md  plugin_list.md  plugin_system.md  robot_joint_state_handling.md
simple_ur10e_description/: CMakeLists.txt  package.xml
simple_ur10e_description/config/: ur.ros2_control.xacro
simple_ur10e_description/config/ur10e/: calibration.yaml  initial_positions.yaml  visual_parameters.yaml
simple_ur10e_description/meshes/collision/: base.stl
simple_ur10e_description/meshes/visual/: base.dae
simple_ur10e_description/urdf/: generate_urdf.sh  ur10e.xacro
simple_ur10e_description/urdf/single_parts/: ur.xacro  ur_macro.xacro
simple_ur10e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
simple_ur10e_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ur10e.ros2_control.xacro  ur10e.srdf  ur10e.urdf.xacro
simple_ur10e_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur_ros_rtde/: CMakeLists.txt  README.md  generate_control_script_str.cmake  package.xml  plugins.xml
ur_ros_rtde/config/: rtde_control.script  sg_control_program.urp  ur_rtde_5221785.patch  ur_rtde_7bd8f3481877cc9aeec2cbb2b109326b6bbab282.patch  ur_rtde_96c24ae.patch
ur_ros_rtde/include/ur_ros_rtde/: command_base_class.hpp  command_server_template.hpp  control_script_utils.hpp  dahsboard_server_template.hpp  dashboard_command_base_class.hpp  extension_base_class.hpp  robot_state_receiver.hpp  utils.hpp
ur_ros_rtde/launch/: command_server.launch.py  dashboard_server.launch.py  dashboard_server_pal1.launch.py  robot_state_receiver.launch.py  robot_state_receiver_example.launch.py
ur_ros_rtde/src/: command_server.cpp  command_server_template_specialization.cpp  control_script_str.h  dashboard_server.cpp  robot_state_receiver.cpp
ur_ros_rtde/src/base_commands/: execute_parametrized_trajectory.cpp  execute_path.cpp  execute_trajectory.cpp  execute_trajectory_backup.txt  move_j.cpp  move_j_relative.cpp  move_l.cpp  move_l_relative.cpp  move_until_contact.cpp  move_until_force.cpp  move_until_torque.cpp  reset_force_torque_sensor.cpp  send_custom_script.cpp  servo_j.cpp  servo_stop.cpp  set_digital_pin.cpp  set_free_drive.cpp  set_payload.cpp  set_speed_slider.cpp  trajectory_time_planning.h
ur_ros_rtde/src/base_dashboard_commands/: add_to_log.cpp  brake_release.cpp  close_popup.cpp  close_safety_popup.cpp  get_loaded_program.cpp  get_robot_model.cpp  get_serial_number.cpp  is_in_remote_control.cpp  is_program_saved.cpp  load_urp.cpp  pause.cpp  play.cpp  polyscope_version.cpp  popup.cpp  power_off.cpp  power_on.cpp  program_state.cpp  restart_safety.cpp  robot_mode.cpp  running.cpp  safety_mode.cpp  safety_status.cpp  shutdown.cpp  stop.cpp  unlock_protective_stop.cpp
ur_ros_rtde/src/test/: test_command_server.cpp  test_trajectory_execution.cpp
ur_ros_rtde/src/tests/: evaluate_jitter.cpp  evaluate_jitter_plugins.cpp
ur_ros_rtde_gripper_commands/: CMakeLists.txt  README.md  generate_preamble_str.cmake  package.xml  plugins.xml
ur_ros_rtde_gripper_commands/action/: SgGetWidth.action  SgGrip.action  SgRelease.action  SoftGripperControl.action
ur_ros_rtde_gripper_commands/config/: OnRobotSG_preamble.script  rtde_control.script
ur_ros_rtde_gripper_commands/src/: OnRobotSG_preamble.h  set_deposit.cpp  set_suction.cpp  sg_get_width.cpp  sg_grip.cpp  sg_release.cpp  soft_gripper_control.cpp
ur_ros_rtde_gripper_commands/src/commands/: set_deposit.cpp  set_suction.cpp
ur_ros_rtde_gripper_commands/src/extensions/: sg_get_width.cpp  sg_grip.cpp  sg_release.cpp
ur_ros_rtde_msgs/: CMakeLists.txt  package.xml
ur_ros_rtde_msgs/action/: AddToLog.action  ExecuteParametrizedTrajectory.action  ExecutePath.action  ExecuteTrajectory.action  IsProgramSaved.action  MoveJRelative.action  MoveL.action  MoveUntilContact.action  MoveUntilForce.action  MoveUntilTorque.action  ResetForceTorqueSensor.action  SafetyMode.action  SendCustomScript.action  ServoJ.action  ServoStop.action  SetDeposit.action  SetDigitalPin.action  SetFreedrive.action  SetPayload.action  SetSpeedSlider.action  SetSuction.action  Shutdown.action
ur_ros_rtde_msgs/msg/: IOState.msg  JointsConfiguration.msg  Vector.msg
ur_ros_rtde_msgs/srv/: GetIOState.srv  GetInternalState.srv  GetJointState.srv  GetRobotConfiguration.srv  GetTcpPose.srv  GetWrench.srv  StartDataRecording.srv
ur_ros_rtde_simple_clients/: CMakeLists.txt  package.xml
ur_ros_rtde_simple_clients/include/ur_ros_rtde_simple_clients/: simple_action_client_template.hpp  simple_service_client_template.hpp
ur_ros_rtde_tutorials/: CMakeLists.txt  README.md  package.xml  plugins.xml
ur_ros_rtde_tutorials/action/: MoveDownUntilForce.action
ur_ros_rtde_tutorials/src/: linear_movements.cpp  linear_moving_force_sensing.cpp  move_down_until_force.cpp  trajectory_execution.cpp
