<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_ros_rtde_simple_clients</name>
  <version>0.0.0</version>
  <description>simple clients for calling ros2 actions and servers</description>
  <maintainer email="alessio.saccuti@unipr.it">Alessio Saccuti</maintainer>
  <license>BSD-3-Clause</license>
 
 
 <build_depend>ament_cmake</build_depend>
<build_export_depend>ament_cmake</build_export_depend>
<exec_depend>ament_cmake</exec_depend>

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
