<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_ros_rtde_tutorials</name>
  <version>0.0.0</version>
  <description>ur_ros_rtde tutorials</description>
  <maintainer email="alessio.saccuti@unipr.it">Alessio Saccuti</maintainer>
  <license>BSD-3-Clause</license>

  <depend>ur_ros_rtde_msgs</depend>
  <build_depend>ur_ros_rtde</build_depend>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
